--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
 
-<head>
+  <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Расширения Апекс-ВУЗ - {% block title %}{% endblock %}</title>
@@ -18,69 +18,135 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/Nunito.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='fonts/fontawesome-all.min.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/Features-Cards.css') }}">
-</head>
+  </head>
 
-<body id="page-top">
+  <body id="page-top">
     <div id="wrapper">
-        <nav class="navbar navbar-dark sticky-top align-items-start sidebar sidebar-dark mobile-hid" style="background: #002649;">
-            <div class="container-fluid d-flex flex-column p-0"><a class="navbar-brand d-flex justify-content-center align-items-center sidebar-brand m-0" href="#" style="opacity: 0.80;">
-                    <div class="sidebar-brand-icon"><i class="fas fa-hands-helping"></i></div>
-                    <div class="sidebar-brand-text mx-3"><span>Сервисы</span></div>
+      <nav class="navbar navbar-dark sticky-top align-items-start sidebar sidebar-dark mobile-hid" style="background: #002649;">
+        <div class="container-fluid d-flex flex-column p-0">
+          <a class="navbar-brand d-flex justify-content-center align-items-center sidebar-brand m-0" href="/" style="opacity: 0.80;">
+            <div class="sidebar-brand-icon"><i class="fas fa-hands-helping"></i></div>
+            <div class="sidebar-brand-text mx-3"><span>Сервисы</span></div>
+          </a>
+          <ul class="navbar-nav text-light" id="accordionSidebar">
+
+            <!-- Главная -->
+            <li class="nav-item"><a class="nav-link py-2" href="/"><i class="fas fa-home"></i><span>Главная</span></a></li>
+
+            <!-- Администрирование -->
+            {% if current_user.is_authenticated and current_user.role in (config.ROLE_ADMIN, ) %}
+              <li class="nav-item dropdown">
+                <a class="dropdown-toggle nav-link py-2" aria-expanded="false" data-bs-toggle="dropdown" data-bs-auto-close="false" href="#">
+                  <i class="fas fa-user-cog"></i>
+                  <span>Пользователи</span>
                 </a>
-                <ul class="navbar-nav text-light" id="accordionSidebar">
-                    <li class="nav-item"><a class="nav-link py-2" href="/"><i class="fas fa-home"></i><span>Главная</span></a></li>
-                    <li class="nav-item dropdown" style="--bs-danger-rgb: 211,5,71;"><a class="dropdown-toggle nav-link py-2" aria-expanded="false" data-bs-toggle="dropdown" data-bs-auto-close="false" href="#"><i class="fas fa-user-cog"></i><span>Пользователи</span></a>
-                        <div class="dropdown-menu text-center py-0"><a class="dropdown-item text-center py-1" href="../auth/register.html">Регистрация</a><a class="dropdown-item text-center py-1" href="#">Управление</a></div>
-                    </li>
-                    <li class="nav-item text-start"><a class="nav-link py-2" href="../schedule/schedule.html"><i class="far fa-calendar-alt"></i><span>Расписание</span></a></li>
-                    <li class="nav-item"><a class="nav-link py-2" href="../load/load_report.html"><i class="fas fa-receipt"></i><span>Отчет о нагрузке</span></a></li>
-                    <li class="nav-item dropdown"><a class="dropdown-toggle nav-link py-2" aria-expanded="false" data-bs-toggle="dropdown" data-bs-auto-close="false" href="#"><i class="fas fa-layer-group"></i><span>Учебные планы</span></a>
-                        <div class="dropdown-menu text-center py-0"><a class="dropdown-item text-center py-1" href="../plans/comp_load.html">Загрузка компетенций</a><a class="dropdown-item text-center py-1" href="../plans/matrix_simple_load.html">Матрица простая</a><a class="dropdown-item text-center py-1" href="../plans/matrix_indicator_load.html">Матрица с индикаторами</a><a class="dropdown-item text-center py-1" href="../plans/matrix_indicator_file.html">Индикаторы по дисциплинам</a></div>
-                    </li>
-                    <li class="nav-item dropdown"><a class="dropdown-toggle nav-link py-2" aria-expanded="false" data-bs-toggle="dropdown" data-bs-auto-close="false" href="#"><i class="fas fa-clipboard-list"></i><span>Программы</span></a>
-                        <div class="dropdown-menu text-center py-0"><a class="dropdown-item text-center py-1" href="../programs/wp_dept_check.html">Проверка по кафедре<br></a><a class="dropdown-item text-center py-1" href="../programs/wp_dates_update.html">Обновление дат</a><a class="dropdown-item text-center py-1" href="../programs/wp_fields.html">Значения полей<br></a><a class="dropdown-item text-center py-1" href="../programs/wp_data.html">Общая информация<br></a><a class="dropdown-item text-center py-1" href="../programs/wp_title.html">Титульные листы<br></a></div>
-                    </li>
-                    <li class="nav-item dropdown"><a class="dropdown-toggle nav-link py-2" aria-expanded="false" data-bs-toggle="dropdown" data-bs-auto-close="false" href="#"><i class="fas fa-book-open"></i><span>Обеспечение</span></a>
-                        <div class="dropdown-menu text-center py-0"><a class="dropdown-item text-center py-1" href="../library/library_choose_plan.html">Список литературы<br></a><a class="dropdown-item text-center py-1" href="../library/library_upload.html">Интернет ресурсы</a><a class="dropdown-item text-center py-1" href="#">Базы и справочные системы<br></a><a class="dropdown-item text-center py-1" href="#">Научная продукция<br></a></div>
-                    </li>
-                </ul>
-                <div class="text-center d-none d-md-inline"></div>
-            </div>
-        </nav>
-        <div class="d-flex flex-column" id="content-wrapper">
-            <div id="content">
-                <nav class="navbar navbar-light navbar-expand bg-white shadow mb-4 topbar static-top">
-                    <div class="container-fluid"><button class="btn btn-link d-md-none rounded-circle me-3" id="sidebarToggleTop" type="button"><i class="fas fa-bars"></i></button>
-                        <h5 class="text-dark mb-0">Расширения базовых функций Апекс-ВУЗ<br></h5>
-                        <ul class="navbar-nav flex-nowrap ms-auto">
-                            <div class="d-none d-sm-block topbar-divider"></div>
-                            <li class="nav-item dropdown no-arrow">
-                                {% if current_user.is_anonymous %}
-                                    <a class="nav-link" href="{{ url_for('auth.login') }}"><span class="d-none d-lg-inline me-2 text-gray-600 small">Войти</span><i class="fas fa-user text-warning" style="font-size: 16px;color: var(--bs-green);"></i></a>
-                                {% endif %}
-                                {% if current_user.is_authenticated %}
-                                    <div class="nav-item dropdown no-arrow"><a class="dropdown-toggle nav-link" aria-expanded="false" data-bs-toggle="dropdown" href="#"><span class="text-capitalize d-none d-lg-inline me-2 text-gray-600 small">{{ current_user }}</span><i class="far fa-check-square" style="font-size: 16px;color: var(--bs-green);"></i></a>
-                                        <div class="dropdown-menu shadow dropdown-menu-end animated--grow-in"><a class="dropdown-item" href="{{ url_for('auth.logout') }}"><i class="fas fa-sign-out-alt fa-sm fa-fw me-2 text-gray-400"></i>Выйти</a></div>
-                                    </div>
-                                {% endif %}
-                            </li>
-                        </ul>
+                  <div class="dropdown-menu text-center py-0">
+                    <a class="dropdown-item text-center py-1" href="{{ url_for('auth.register') }}">Регистрация</a>
+                    <a class="dropdown-item text-center py-1" href="{{ url_for('admin.index') + 'user' }}">Управление</a>
+                  </div>
+              </li>
+            {% endif %}
+
+            <!-- Расписание -->
+            <li class="nav-item text-start"><a class="nav-link py-2" href="../schedule/schedule.html">
+              <i class="far fa-calendar-alt"></i><span>Расписание</span></a>
+            </li>
+
+            <!-- Отчет о нагрузке -->
+            <li class="nav-item"><a class="nav-link py-2" href="../load/load_report.html">
+              <i class="fas fa-receipt"></i><span>Отчет о нагрузке</span></a>
+            </li>
+
+            <!-- Учебные планы -->
+            <li class="nav-item dropdown">
+              <a class="dropdown-toggle nav-link py-2" aria-expanded="false" data-bs-toggle="dropdown" data-bs-auto-close="false" href="#">
+                <i class="fas fa-layer-group"></i>
+                <span>Учебные планы</span>
+              </a>
+              <div class="dropdown-menu text-center py-0">
+                <a class="dropdown-item text-center py-1" href="../plans/comp_load.html">Загрузка компетенций</a>
+                <a class="dropdown-item text-center py-1" href="../plans/matrix_simple_load.html">Матрица простая</a>
+                <a class="dropdown-item text-center py-1" href="../plans/matrix_indicator_load.html">Матрица с индикаторами</a>
+                <a class="dropdown-item text-center py-1" href="../plans/matrix_indicator_file.html">Индикаторы по дисциплинам</a>
+              </div>
+            </li>
+
+            <!-- Программы -->
+            <li class="nav-item dropdown">
+              <a class="dropdown-toggle nav-link py-2" aria-expanded="false" data-bs-toggle="dropdown" data-bs-auto-close="false" href="#">
+                <i class="fas fa-clipboard-list"></i>
+                <span>Программы</span>
+              </a>
+              <div class="dropdown-menu text-center py-0">
+                <a class="dropdown-item text-center py-1" href="../programs/wp_dept_check.html">Проверка по кафедре<br></a>
+                <a class="dropdown-item text-center py-1" href="../programs/wp_dates_update.html">Обновление дат</a>
+                <a class="dropdown-item text-center py-1" href="../programs/wp_fields.html">Значения полей<br></a>
+                <a class="dropdown-item text-center py-1" href="../programs/wp_data.html">Общая информация<br></a>
+                <a class="dropdown-item text-center py-1" href="../programs/wp_title.html">Титульные листы<br></a>
+              </div>
+            </li>
+
+            <!-- Обеспечение -->
+            <li class="nav-item dropdown">
+              <a class="dropdown-toggle nav-link py-2" aria-expanded="false" data-bs-toggle="dropdown" data-bs-auto-close="false" href="#">
+                <i class="fas fa-book-open"></i>
+                <span>Обеспечение</span>
+              </a>
+              <div class="dropdown-menu text-center py-0">
+                <a class="dropdown-item text-center py-1" href="../library/library_choose_plan.html">Список литературы<br></a>
+                <a class="dropdown-item text-center py-1" href="../library/library_upload.html">Интернет ресурсы</a>
+                <a class="dropdown-item text-center py-1" href="#">Базы и справочные системы<br></a>
+                <a class="dropdown-item text-center py-1" href="#">Научная продукция<br></a>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </nav>
+      <div class="d-flex flex-column" id="content-wrapper">
+        <div id="content">
+          <nav class="navbar navbar-light navbar-expand bg-white shadow mb-4 topbar static-top">
+            <div class="container-fluid">
+              <button class="btn btn-link d-md-none rounded-circle me-3" id="sidebarToggleTop" type="button">
+                <i class="fas fa-bars"></i>
+              </button>
+              <h5 class="text-dark mb-0">Расширения базовых функций Апекс-ВУЗ<br></h5>
+              <ul class="navbar-nav flex-nowrap ms-auto">
+                <div class="d-none d-sm-block topbar-divider"></div>
+                <li class="nav-item dropdown no-arrow">
+                  {% if current_user.is_anonymous %}
+                    <a class="nav-link" href="{{ url_for('auth.login') }}">
+                      <span class="d-none d-lg-inline me-2 text-gray-600 small">Войти</span>
+                      <i class="fas fa-user text-warning" style="font-size: 16px;color: var(--bs-green);"></i>
+                    </a>
+                  {% endif %}
+                  {% if current_user.is_authenticated %}
+                    <div class="nav-item dropdown no-arrow">
+                      <a class="dropdown-toggle nav-link" aria-expanded="false" data-bs-toggle="dropdown" href="#">
+                        <span class="text-capitalize d-none d-lg-inline me-2 text-gray-600 small">{{ current_user }}</span>
+                        <i class="far fa-check-square" style="font-size: 16px;color: var(--bs-green);"></i>
+                      </a>
+                      <div class="dropdown-menu shadow dropdown-menu-end animated--grow-in">
+                        <a class="dropdown-item" href="{{ url_for('auth.logout') }}">
+                          <i class="fas fa-sign-out-alt fa-sm fa-fw me-2 text-gray-400"></i>Выйти</a>
+                      </div>
                     </div>
-                </nav>
-
-            {% block content %}
-            {% endblock %}
-
+                  {% endif %}
+                </li>
+              </ul>
             </div>
-            <footer class="bg-white sticky-footer" style="padding-top: 4px;padding-bottom: 4px;--bs-body-bg: #f8f9fc;">
-                <div class="container my-auto">
-                    <div class="text-center my-auto copyright"><span style="font-size: 9.8px;">Copyright © Evgeny Semenov, 2022</span></div>
-                </div>
-            </footer>
-        </div><a class="border rounded d-inline scroll-to-top" href="#page-top"><i class="fas fa-angle-up"></i></a>
+          </nav>
+          {% block content %}
+          {% endblock %}
+        </div>
+        <footer class="bg-white sticky-footer" style="padding-top: 4px;padding-bottom: 4px;--bs-body-bg: #f8f9fc;">
+          <div class="container my-auto">
+            <div class="text-center my-auto copyright"><span style="font-size: 9.8px;">Copyright © Evgeny Semenov, 2022</span></div>
+          </div>
+        </footer>
+      </div><a class="border rounded d-inline scroll-to-top" href="#page-top"><i class="fas fa-angle-up"></i></a>
     </div>
     <script src="{{ url_for('static', filename='bootstrap/js/bootstrap.min.js') }}"></script>
     <script src="{{ url_for('static', filename='js/theme.js') }}"></script>
-</body>
+  </body>
 
 </html>
