--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,7 +1,5 @@
 {% extends 'base.html' %}
-{% block title %}
-  Главная
-{% endblock %}
+{% block title %}Главная{% endblock %}
 {% block content %}
 <div class="container">
     <div class="row mb-1">
