template design update

--- a/app/templates/auth/register.html
+++ b/app/templates/auth/register.html
@@ -1,7 +1,5 @@
 {% extends 'base.html' %}
-{% block title %}
-  Регистрация
-{% endblock %}
+{% block title %}Регистрация{% endblock %}
 {% block content %}
 <div class="container-fluid">
     <h3 class="text-dark mb-1" style="text-align: center;">
