--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -1,54 +1,52 @@
 {% extends 'base.html' %}
 {% block content %}
 <div class="container-fluid">
-    <h4 class="text-dark mb-1" style="text-align: center;">
-      {% block title %}Авторизация{% endblock %}<br>
-    </h4>
+  <h4 class="text-dark mb-1" style="text-align: center;">
+    {% block title %}Авторизация{% endblock %}<br>
+  </h4>
 </div>
 <section class="position-relative py-2 py-xl-2">
-    <div class="container">
-        <div class="row d-flex justify-content-center">
-            <div class="col-md-6 col-xl-4">
-                <div class="card mb-5">
-                    <div class="card-body d-flex flex-column align-items-center">
-                        <div class="bs-icon-xl bs-icon-circle bs-icon-primary bs-icon my-4">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-person">
-                                <path d="M8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0zm4 8c0 1-1 1-1 1H3s-1 0-1-1 1-4 6-4 6 3 6 4zm-1-.004c-.001-.246-.154-.986-.832-1.664C11.516 10.68 10.289 10 8 10c-2.29 0-3.516.68-4.168 1.332-.678.678-.83 1.418-.832 1.664h10z"></path>
-                            </svg>
-                        </div>
-                        <form class="text-center" method="post">
-                            {{ form.hidden_tag() }}
-
-                            <div class="form-floating mb-3">
-                                <input class="form-control" type="text" id="username" name="username" placeholder="{{ form.username.data }}">
-                                <label class="form-label">{{ form.username.label }}</label>
-                                {% for error in form.username.errors %}
-                                    <span style="color: var(--bs-danger);">{{ error }}</span>
-                                {% endfor %}
-                            </div>
-
-                            <div class="form-floating mb-3">
-                                <input class="form-control" type="password" id="password" name="password" placeholder="{{ form.password.data }}">
-                                <label class="form-label">{{ form.password.label }}</label>
-                                {% for error in form.password.errors %}
-                                    <span style="color: var(--bs-danger);">{{ error }}</span>
-                                {% endfor %}
-                            </div>
-
-                            {% if error %}
-                                <span id="error" style="color: var(--bs-danger);">{{ error }}</span>
-                            {% endif %}
-
-                            <div class="mb-3"><button class="btn btn-primary d-block w-100" id="submit" type="submit" name="submit">
-                                {{ form.submit.label }}</button></div>
-
-                            <div class="form-check" style="text-align: left;"><input class="form-check-input" type="checkbox" id="formRememberMe" name="remember_me">
-                                <label class="form-check-label" id="remember_me_label" for="formRememberMe">{{ form.remember_me.label }}</label></div>
-                        </form>
-                    </div>
-                </div>
+  <div class="container">
+    <div class="row d-flex justify-content-center">
+      <div class="col-md-6 col-xl-4">
+        <div class="card mb-5">
+          <div class="card-body d-flex flex-column align-items-center">
+            <div class="bs-icon-xl bs-icon-circle bs-icon-primary bs-icon my-4">
+              <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-person">
+                <path d="M8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0zm4 8c0 1-1 1-1 1H3s-1 0-1-1 1-4 6-4 6 3 6 4zm-1-.004c-.001-.246-.154-.986-.832-1.664C11.516 10.68 10.289 10 8 10c-2.29 0-3.516.68-4.168 1.332-.678.678-.83 1.418-.832 1.664h10z"></path>
+              </svg>
             </div>
+            <form class="text-center" method="post">
+              {{ form.hidden_tag() }}
+              <div class="form-floating mb-3">
+                {{ form.username(class="form-control", type="text", placeholder=form.username.data) }}
+                {{ form.username.label }}
+                {% for error in form.username.errors %}
+                  <span style="color: var(--bs-danger);">{{ error }}</span>
+                {% endfor %}
+              </div>
+              <div class="form-floating mb-3">
+                {{ form.password(class="form-control", type="text", placeholder=form.password.data) }}
+                {{ form.password.label }}
+                {% for error in form.password.errors %}
+                  <span style="color: var(--bs-danger);">{{ error }}</span>
+                {% endfor %}
+              </div>
+              {% if error %}
+                <span id="error" style="color: var(--bs-danger);">{{ error }}</span>
+              {% endif %}
+              <div class="mb-3">
+                {{ form.submit(class="btn btn-primary d-block w-100", type="submit") }}
+              </div>
+              <div class="form-check" style="text-align: left;">
+                {{ form.remember_me(class="form-check-input", type="checkbox", id="formRememberMe") }}
+                {{ form.remember_me.label(class="form-check-label", for="formRememberMe") }}
+              </div>
+            </form>
+          </div>
         </div>
+      </div>
     </div>
+  </div>
 </section>
 {% endblock %}
